--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,7 +25,7 @@
       &ndash; {{ shop.name }}
     {%- endunless -%}
   {%- endcapture -%}
-  <title>This is My Site asdfasd </title>
+  <title>This is My Site Title </title>
 
   {%- if page_description -%}
     <meta name="description" content="{{ page_description | escape }}">
